--- a/html/sass/_index.scss
+++ b/html/sass/_index.scss
@@ -14,6 +14,10 @@
     background: #fff;
     border: 0px solid #ECECEC;
     width: 100%;
+    @media screen and (max-width: $breakpoint) {
+        padding-top: 56px;
+        border-bottom:  0.5px solid #BFBFBF;
+    }
     .logo {
         gap: 24px;
         max-width: 90px;
@@ -57,6 +61,7 @@
 }
 #menuDrawer {
     padding: 52px 28px !important;
+    width: 86%;
 }
 .nav-item {
     margin-bottom: 24px;
